feat(Campaign): notes on the campaign page
