# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\CampaignController;
+use App\Http\Controllers\Api\CampaignsNoteController;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\CharacterController;
 use App\Http\Controllers\Api\MainPageController;
@@ -16,4 +17,10 @@ Route::prefix('character')->group(function () {
 
 Route::prefix('campaigns')->group(function () {
     Route::get('{id}', [CampaignController::class, 'getCampaignById']);
+});
+
+Route::prefix('campaign-notes')->group(function () {
+    Route::post('/', [CampaignsNoteController::class, 'store']);
+    Route::put('{id}', [CampaignsNoteController::class, 'update']);
+    Route::delete('{id}', [CampaignsNoteController::class, 'destroy']);
 });
